--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "author": "Muhammad Ubaid Raza <mubaidr@gmail.com>",
+  "author": "Yoandy Perez Caceres <perezkceres@gmail.com>",
   "dependencies": {
-    "buefy": "^0.7.2",
-    "vue": "^2.5.22"
+    "axios": "^0.18.0",
+    "element-ui": "^2.4.11",
+    "vue": "^2.5.22",
+    "vue-i18n": "^8.7.0",
+    "vue-router": "^3.0.2",
+    "vuex": "^3.1.0"
   },
-  "description": "vue-chrome-extension-boilerplate",
+  "description": "vue-chrome-extension-boilerplate-element-ui",
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
@@ -23,6 +27,9 @@
     "eslint-plugin-vue": "^4.7.1",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.11.0",
+    "normalize.css": "^8.0.1",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
@@ -36,12 +43,10 @@
     "webpack-shell-plugin": "^0.5.0",
     "zip-folder": "^1.0.0"
   },
-  "name": "vue-chrome-extension-boilerplate",
+  "name": "vue-chrome-extension-boilerplate-element-ui",
   "scripts": {
-    "build":
-      "cross-env NODE_ENV=production webpack --progress --hide-modules && node scripts/build-zip.js",
-    "dev":
-      "cross-env NODE_ENV=development webpack --progress --hide-modules --hot --watch"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules && node scripts/build-zip.js",
+    "dev": "cross-env NODE_ENV=development webpack --progress --hide-modules --hot --watch"
   },
   "version": "1.1.0"
 }
